welcome.lessons.welcome.variables.Variables.scala.error
Variables:5: error: Int(1) does not take parameters
	nbPas = nbPas +1()
                        ^